--- a/css/main.scss
+++ b/css/main.scss
@@ -9,7 +9,7 @@
 $base-font-family: "Baskerville", "Century Schoolbook L", "Times New Roman", serif;
 $base-font-size:   22px;
 $base-font-weight: 400;
-$small-font-size:  $base-font-size * 0.9;
+$small-font-size:  90%;
 $base-line-height: 1.5;
 
 $spacing-unit:     30px;
@@ -18,7 +18,7 @@ $text-color:       #222;
 $background-color: #fff;
 $brand-color:      #e81c4f;
 
-$grey-color:       #888;
+$grey-color:       #777;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
