Add comment support

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -34,7 +34,9 @@
   }
 }
 
-
+.page-comments {
+  padding: 0 0 $spacing-unit 0;
+}
 
 /**
  * Site footer
@@ -81,7 +83,6 @@
   display: block;
   font-size: 24px;
 }
-
 
 
 /**
