--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,18 @@
 ---
 layout: default
 ---
-<article class="post">
+<div class="page-content">
+  <div class="wrapper">
+    <article class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+      <header class="post-header">
+        <h1 class="post-title">{{ page.title }}</h1>
+      </header>
 
-  <div class="post-content">
-    {{ content }}
+      <div class="post-content">
+        {{ content }}
+      </div>
+
+    </article>
   </div>
-
-</article>
+</div>
