--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,13 +21,9 @@ layout: default
   <div class="wrapper">
     <div id="disqus_thread"></div>
     <script>
-    /**
-    * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
-    */
     var disqus_config = function () {
-      //this.page.url = '{{ site.baseurl }}{{ page.url }}'; // Replace PAGE_URL with your page's canonical URL variable
-      //this.page.identifier = '{{ page.slug }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      this.page.url = '{{ site.url }}{{ page.url }}';
+      this.page.identifier = '{{ page.slug }}';
     };
     (function() { // DON'T EDIT BELOW THIS LINE
       var d = document, s = d.createElement('script');
