--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 
 
 // Our variables
-$base-font-family: "Computer Modern Serif", serif;
+$base-font-family: "Computer Modern Serif", "Baskerville", serif;
 $monospace-font-family: "Computer Modern Typewriter", "Courier", monospace;
 $base-font-size:   20px;
 $base-font-weight: 400;
