Hide comments by default

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -29,8 +29,26 @@
   }
 }
 
-.page-comments {
-  padding: 0 0 $spacing-unit 0;
+.post-comments {
+  padding: 0 0 $spacing-unit;
+}
+
+#post-comments-link {
+  display: block;
+  text-align: center;
+  font-style: italic;
+}
+
+#post-comments-link.hidden,
+.hidden {
+  display: none;
+}
+
+.no-javascript {
+  font-style: italic;
+  font-size: $small-font-size;
+  color: $grey-color;
+  text-align: center;
 }
 
 /**
