--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,27 +13,24 @@ layout: default
       <div class="post-content" itemprop="articleBody">
         {{ content }}
       </div>
+
+      <a id="post-comments-link"
+         href="{{ post.url }}#disqus_thread"
+         data-disqus-identifier="{{page.slug}}">
+      </a>
+      <noscript class="no-javascript">Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments</a>.</noscript>
     </article>
   </div>
 </div>
 
-<div class="page-comments">
+<div class="page-comments hidden" id="post-comments">
   <div class="wrapper">
     <div id="disqus_thread"></div>
+    <script src="{{ site.baseurl }}/js/comments.js"></script>
     <script>
-    var disqus_config = function () {
-      this.page.url = '{{ site.url }}{{ page.url }}';
-      this.page.identifier = '{{ page.slug }}';
-    };
-    (function() { // DON'T EDIT BELOW THIS LINE
-      var d = document, s = d.createElement('script');
-
-      s.src = '//owickstrom.disqus.com/embed.js';
-
-      s.setAttribute('data-timestamp', +new Date());
-      (d.head || d.body).appendChild(s);
-    })();
+    initializeComments('{{ site.url }}{{ page.url }}', '{{ page.slug }}');
     </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+    <script id="dsq-count-scr" src="//owickstrom.disqus.com/count.js" async></script>
   </div>
 </div>
+
