--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -186,6 +186,11 @@ pre {
     padding-right: $spacing-unit / 2;
     padding-left: $spacing-unit / 2;
   }
+
+  @include media-query($on-palm) {
+    padding-right: $spacing-unit / 4;
+    padding-left: $spacing-unit / 4;
+  }
 }
 
 
