New centered design

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,9 @@
 <footer class="site-footer">
 
   <div class="wrapper">
-    <a href="{{ "/feed.xml" | prepend: site.baseurl }}">Subscribe via RSS</a>
+    <p><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a></p>
+    <p><a href="{{ "/feed.xml" | prepend: site.baseurl }}">Subscribe via RSS</a></p>
+    <p class="copyright">Copyright &copy; 2015 - {{ site.time | date: '%Y' }} Oskar Wickström</p>
   </div>
 
 </footer>
