--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,8 +5,8 @@ layout: default
   <div class="wrapper">
     <article class="post">
 
-      <header class="post-header">
-        <h1 class="post-title">{{ page.title }}</h1>
+      <header class="page-header">
+        <h1 class="page-title">{{ page.title }}</h1>
       </header>
 
       <div class="post-content">
