--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -45,7 +45,7 @@ h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-  margin-bottom: 24px;
+  margin-bottom: 1em;
 }
 
 
