Even padding between footer and post list

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -51,7 +51,7 @@
  * Site footer
  */
 .site-footer {
-  padding: $spacing-unit 0;
+  padding: 0 0 $spacing-unit;
   font-size: 16px;
   text-align: center;
 }
