Changes based on Adams feedback

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -93,7 +93,11 @@ li {
  */
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: $spacing-unit/2;
-  font-weight: $base-font-weight;
+  font-weight: bold;
+}
+
+h1 {
+  font-weight: normal;
 }
 
 
