--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -125,15 +125,16 @@
 
   h2 {
     margin-top: $spacing-unit;
-    font-size: 160%;
+    font-size: 125%;
   }
 
   h3 {
-    font-size: 120%;
+    font-size: 100%;
   }
 
   h4 {
     font-size: 100%;
+    font-weight: normal;
 
     @include media-query($on-laptop) {
       font-size: 18px;
