--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
     <p><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a></p>
     <p><a class="rss-subscribe" href="{{ "/feed.xml" | prepend: site.baseurl }}">Subscribe via RSS</a></p>
-    <p class="copyright">Copyright &copy; 2015 - {{ site.time | date: '%Y' }} Oskar Wickström</p>
+    <p class="copyright">Copyright &copy; 2015 Oskar Wickström</p>
   </div>
 
 </footer>
