--- a/css/main.scss
+++ b/css/main.scss
@@ -8,14 +8,14 @@
 // Our variables
 $base-font-family: "Crimson Text", "Baskerville", serif;
 $monospace-font-family: "Ubuntu Mono", monospace;
-$base-font-size:   19px;
+$base-font-size:   18px;
 $base-font-weight: 400;
 $small-font-size:  90%;
-$base-line-height: 1.3;
+$base-line-height: 24px;
 
 $spacing-unit:     32px;
 
-$text-color:       #333;
+$text-color:       #111;
 $background-color: #fff;
 $brand-color:      #e81c4f;
 
