--- a/css/main.scss
+++ b/css/main.scss
@@ -6,8 +6,9 @@
 
 
 // Our variables
-$base-font-family: "Crimson Text", "Baskerville", serif;
-$monospace-font-family: "Ubuntu Mono", monospace;
+$base-font-family: "Hoefler Text", "Baskerville", "Palatino", "Georgia", serif;
+$sans-font-family: "Gill Sans", "Trebuchet MS", sans-serif;
+$monospace-font-family: 'Monaco', 'Consolas', 'Courier', monospace;
 $base-font-size:   18px;
 $base-font-weight: 400;
 $small-font-size:  90%;
