Change padding and mono font

--- a/css/main.scss
+++ b/css/main.scss
@@ -8,7 +8,7 @@
 // Our variables
 $base-font-family: "Hoefler Text", "Baskerville", "Roboto Slab", "Palatino", "Georgia", serif;
 $sans-font-family: "Gill Sans", "Trebuchet MS", sans-serif;
-$monospace-font-family: 'Monaco', 'Consolas', 'Courier', monospace;
+$monospace-font-family: 'Latin Modern Mono', 'CMU Typewriter Text', 'Monaco', 'Consolas', monospace;
 $base-font-size:   18px;
 $base-font-weight: 400;
 $small-font-size:  90%;
