--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -66,6 +66,9 @@
   @include media-query($on-laptop) {
     font-size: 36px;
   }
+  @include media-query($on-palm) {
+    font-size: 32px;
+  }
 }
 
 .post-list {
