--- a/css/main.scss
+++ b/css/main.scss
@@ -12,7 +12,7 @@ $monospace-font-family: 'Latin Modern Mono', 'CMU Typewriter Text', 'Monaco', 'C
 $base-font-size:   20px;
 $base-font-weight: 400;
 $small-font-size:  90%;
-$base-line-height: 26px;
+$base-line-height: 1.3;
 
 $spacing-unit:     32px;
 
