--- a/css/main.scss
+++ b/css/main.scss
@@ -7,8 +7,8 @@
 
 // Our variables
 $base-font-family: "Hoefler Text", "Palatino", "Roboto Slab", "Georgia", serif;
-$sans-font-family: "Gill Sans", "Trebuchet MS", sans-serif;
-$monospace-font-family: 'Latin Modern Mono', 'CMU Typewriter Text', 'Monaco', 'Consolas', 'Roboto Mono', monospace;
+$sans-font-family: "Gill Sans", "Trebuchet MS", "Ubuntu", sans-serif;
+$monospace-font-family: 'Monaco', 'Consolas', 'Roboto Mono', monospace;
 $base-font-size:   20px;
 $base-font-weight: 400;
 $small-font-size:  90%;
@@ -16,7 +16,7 @@ $base-line-height: 1.3;
 
 $spacing-unit:     32px;
 
-$text-color:       #111;
+$text-color:       #222;
 $background-color: #fff;
 $brand-color:      #e81c4f;
 
