--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,6 +1,3 @@
-.site-title {
-  font-weight: 400;
-}
 .site-nav {
 
   .page-link {
@@ -42,6 +39,7 @@
   padding: $spacing-unit 0 $spacing-unit;
   border-top: 1px solid #ddd;
   text-align: center;
+  font-size: $small-font-size;
 }
 
 /**
@@ -59,7 +57,6 @@
 
 .intro {
   margin-top: 0;
-  margin-bottom: $spacing-unit * 3;
 }
 
 .page-title {
@@ -89,7 +86,6 @@
 }
 .about-me {
   margin-bottom: $spacing-unit;
-  text-align: justify;
 }
 .index-heading {
   position: absolute;
@@ -107,5 +103,4 @@
 
 .post-content {
   margin-bottom: 2em;
-  text-align: justify;
 }
