--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -122,7 +122,31 @@
     img {
         margin: 1em auto;
     }
-    figcaption {
-        font-style: italic;
+}
+
+figcaption,
+.caption {
+    text-align: center;
+    font-style: italic;
+    font-size: $small-font-size;
+    margin: 1em 0 2em;
+}
+
+.musical-signs {
+    text-align: center;
+    margin: 0 auto;
+    
+    tbody tr td:first-child {
+        font-size: 150%;
+    }
+}
+.music-sign {
+    display: inline-block;
+    font-size: 125%;
+    line-height: 1.4rem;
+    vertical-align: sub;
+
+    &.stave {
+        margin: 0 .5em 0 .1em;
     }
 }
