Build up to the first simple generator section

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -97,8 +97,9 @@ li {
 h1, h2, h3, h4, h5, h6 {
   font-size: 100%;
   line-height: inherit;
-  margin-bottom: 1.4em;
-  font-weight: 600;
+  margin-bottom: 1.4rem;
+  font-weight: 500;
+  font-size: 95%;
 }
 
 h2, h3 {
