--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -117,8 +117,6 @@
 }
 
 .post-content figure {
-    text-align: center;
-
     img {
         margin: 1em auto;
     }
@@ -129,7 +127,8 @@ figcaption,
     text-align: center;
     font-style: italic;
     font-size: $small-font-size;
-    margin: 1em 0 2em;
+    margin: 1em auto 2em;
+    max-width: 400px;
 }
 
 .musical-signs {
