Generate score caption numbers

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -136,6 +136,10 @@ figcaption,
     max-width: 400px;
 }
 
+.caption-number {
+  margin-right: .25em;
+}
+
 .musical-signs {
     text-align: center;
     margin: 0 auto;
