Add first naive generator chapter

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     {% include footer.html %}
     {% include load-css.html %}
     {% include analytics.html %}
+    {% include mathjax.html %}
 
   </body>
 
