Add chapter on note grouping

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -168,7 +168,8 @@ code {
 }
 
 pre {
-  padding: 0 1.4rem;
+  padding: .7rem 1.4rem;
+  margin-bottom: 1.4rem;
   overflow-x: auto;
   font-size: 85%;
 }
