Change design to sans-serif based

--- a/_includes/load-css.html
+++ b/_includes/load-css.html
@@ -1,10 +1,4 @@
 <script>
-// Override fonts for Safari, see: https://bugs.webkit.org/show_bug.cgi?id=149455
-// Quite depressing, indeed.
-if (navigator.userAgent.indexOf('Safari') != -1 && navigator.userAgent.indexOf('Chrome') == -1) {
-  document.body.style.fontFamily = 'Palatino, Georgia, serif';
-}
-
 function loadCssAsync(path) {
   function cb() {
     var l = document.createElement('link'); l.rel = 'stylesheet';
@@ -18,4 +12,5 @@ function loadCssAsync(path) {
 };
 
 loadCssAsync('{{ site.baseurl }}/css/syntax-highlighting.css');
+loadCssAsync('https://fonts.googleapis.com/css?family=Cabin:400,400i|Inconsolata|Montserrat:700');
 </script>
