Finish off part 1

--- a/css/main.scss
+++ b/css/main.scss
@@ -6,13 +6,13 @@
 
 
 // Our variables
-$base-font-family: "Cabin", sans-serif;
-$display-font-family: "Montserrat", sans-serif;
+$base-font-family: "Cabin", "Arial", sans-serif;
+$display-font-family: "Montserrat", "Arial", sans-serif;
 $monospace-font-family: "Inconsolata", monospace;
 $base-font-size:   18px;
 $base-font-weight: 400;
 $small-font-size:  90%;
-$base-line-height: 1.4;
+$base-line-height: 1.6;
 
 $spacing-unit:     2rem;
 
