--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -82,6 +82,10 @@ body {
   background: #ffea33;
 }
 
+.post-excerpt {
+  font-style: italic;
+  font-size: 90%;
+}
 .post-meta {
   font-size: 80%;
   text-transform: uppercase;
@@ -93,13 +97,7 @@ body {
 
 
 .post-list {
-  display: flex;
-  flex-wrap: wrap;
-
-  list-style-type: none;
   padding: 0;
-  margin-left: 0;
-  font-size: 90%;
 
   li {
     margin-bottom: 1.8em;
